# fastmail-cli

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.claude/skills/: fastmail.md
.claude/skills/fastmail/: SKILL.md  attachments.md  compose.md  contacts.md  conversations.md  masked.md  search.md
.claude/skills/fastmail/references/: attachments.md  compose.md  contacts.md  conversations.md  masked.md  search.md
.github/workflows/: ci.yml
src/: config.rs  error.rs  main.rs  projection.rs  util.rs
src/carddav/: mod.rs
src/commands/: auth.rs  contacts.rs  download.rs  forward.rs  get.rs  list.rs  move.rs  read.rs  reply.rs  search.rs  send.rs  spam.rs  thread.rs
src/jmap/: mod.rs
src/mcp/: mod.rs
src/mcp/graphql/: mod.rs  mutation.rs  query.rs  types.rs
src/models/: mod.rs
