[package]
name = "fastmail-cli"
version = "2.0.1"
edition = "2024"
description = "CLI for Fastmail's JMAP API"
repository = "https://github.com/radiosilence/fastmail-cli"
license = "MIT"
keywords = ["cli", "email", "fastmail", "jmap"]
categories = ["command-line-utilities", "email"]

[dependencies]
anyhow = "1.0.100"
base64 = "0.22"
clap = { version = "4.5.54", features = ["derive"] }
clap_complete = "4.5.65"
dirs = "6.0.0"
image = { version = "0.25", default-features = false, features = [
  "gif",
  "jpeg",
  "png",
  "webp"
] }
kreuzberg = { version = "~4.4", features = [
  "archives",
  "bundled-pdfium",
  "email",
  "excel",
  "html",
  "language-detection",
  "office",
  "pdf",
  "xml"
] }
async-graphql = "7"
reqwest = { version = "0.13.1", default-features = false, features = [
  "json",
  "rustls"
] }
rmcp = { version = "0.12", features = ["server", "transport-io"] }
schemars = "0.8"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.17"
tokio = { version = "1.49.0", features = ["full"] }
toml = "0.8"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
roxmltree = "0.21.1"

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"

[profile.release]
strip = true
lto = true
codegen-units = 1
